--- a/.forestry/front_matter/templates/homepage.yml
+++ b/.forestry/front_matter/templates/homepage.yml
@@ -2,23 +2,25 @@
 label: Homepage
 hide_body: true
 fields:
-- name: title
-  type: text
-  config:
-    required: true
-  label: Title
-- name: hero_image
-  type: file
-  config:
-    maxSize: 5
-  label: Hero image
-- name: hero_title
-  type: text
-  config:
-    required: false
-  label: Hero title
-- name: hero_sub_title
-  type: text
-  config:
-    required: false
-  label: Hero sub title
+  - name: title
+    type: text
+    config:
+      required: true
+    label: Title
+  - name: hero_image
+    type: file
+    config:
+      maxSize: 5
+    label: Hero image
+  - name: hero_title
+    type: text
+    config:
+      required: false
+    label: Hero title
+  - name: hero_sub_title
+    type: text
+    config:
+      required: false
+    label: Hero sub title
+pages:
+  - content/homepage.md
